# ROSE

./: COPYING  COPYRIGHT  Doxyfile.in  Makefile  Makefile.am  acinclude.m4  autotool_rebuild.sh  configure.ac  configure.in  parser.py  sidl.py
compiler/: Makefile.am  braid.py  codegen.py  demo.py  ir.py  parser.py  patmat.py  scanner.l  sidl.py  sidl_parser.py  sidl_token.py  splicer.py  token.py
compiler/Scanner/: scanner.l
config/: Makefile.am  choose-backend-compiler.m4  config.guess  config.sub  create_system_headers  generate-backend-compiler-specific-headers.m4  install-sh  ltmain.sh  minitermite.m4  missing  support-cuda-opencl.m4  support-rose.m4  support-swipl.m4  ylwrap
config/include-staging/: Makefile.am  policy_hack.c
contrib/: README
doc/: braid.info  braid.texi
docs/Rose/: rose.cfg.in
docs/testDoxygen/: Publications.docs
examples/structbench/: Makefile  benchgen.py
m4/: Makefile.am  ac_prog_javac.m4  ac_prog_javadoc.m4  cca_diagnose.m4  libtool.m4  llnl_check_fast_refcount.m4  llnl_check_java_addclasspath_flag.m4  llnl_check_long_long.m4  llnl_confirm_babel_c_support.m4  llnl_confirm_babel_cxx_support.m4  llnl_confirm_babel_f03_support.m4  llnl_confirm_babel_f77_support.m4  llnl_confirm_babel_f90_support.m4  llnl_confirm_babel_java_support.m4  llnl_confirm_babel_java_support_runtime.m4  llnl_confirm_babel_python_support.m4  llnl_cross_compiling.m4  llnl_cxx_library_ldflags.m4  llnl_f77_c_config.m4  llnl_f77_library_ldflags.m4  llnl_f90_c_config.m4  llnl_f90_library_ldflags.m4  llnl_f90_name_mangling.m4  llnl_f90_pointer_size.m4  llnl_fc_main.m4  llnl_fortran_logical_test.m4  llnl_fortran_string_test.m4  llnl_iso_c_binding.m4  llnl_lib_chasm.m4  llnl_lib_fcmain.m4  llnl_lib_fmain.m4  llnl_libparsifal.m4  llnl_libxml.m4  llnl_prevent_cross_compilation.m4  llnl_prog_jar.m4  llnl_prog_java.m4  llnl_prog_javah.m4  llnl_prog_mpi.m4  llnl_python_aix.m4  llnl_python_numeric.m4  (+3 more)
projects/: Makefile.am
projects/Fortran_to_C/src/: Makefile.am
projects/PolyOpt/: AUTHORS  ChangeLog  INSTALL  INSTALL.standard  Makefile.am  README  aclocal.m4  configure  configure.ac  dgemm.c  install.sh  pocc-installer.sh
projects/PolyOpt/doc/: Makefile.am  pace_tiling_api.c  polyopt.info  polyopt.texi
projects/PolyOpt/polyopt/: Makefile.am
projects/PolyOpt/src/: Makefile.am
projects/PolyOpt/tests/: Makefile.am
projects/UpcTranslation/: Makefile.am
projects/backstroke/normalizations/: expNormalization.C
projects/backstroke/utilities/: utilities.C  utilities.h
projects/backstroke/valueGraph/: Makefile.am  arrayRegion.C  arrayRegion.h  codeGeneration.C  functionReverser.C  functionReverser.h  graphSearch.C  pathNumGenerator.C  pathNumGenerator.h  test.C  types.C  types.h  valueGraph.C  valueGraph.h  valueGraphNode.C  valueGraphNode.h  valueGraphNode3.h
projects/minitermite/: COPYING  Doxyfile.in  HOWTO_ADD_NEW_SGNODE_VARIANTS  Makefile.am  README  configure.ac
projects/minitermite/doc/: man_header.txt  src2term.1  term2src.1
projects/minitermite/regression/: Makefile.include  abs_path.perl  linewrap.awk  make_rule.inc
projects/minitermite/src/: Makefile.include  PrologTerm.cc  RoseEnums.cc  RoseToTerm.cc  TermToRose.cc  cime3_signatures.pl  find-enums.cc  haskell-signatures.pl  make_rule.inc  src2term.cc  stratego-signatures.pl  term2src.cc  termlexer.l++  termparser.y++  termpretty.l++
projects/mpiAnalOptTools/: Makefile.am
projects/mpiAnalOptTools/mpiToGOAL/: Makefile.am  README
projects/mpiAnalOptTools/mpiToGOAL/src/: Makefile.am  main.cpp  mtgTranslatorCommon.cpp  mtgTranslatorCommon.h
projects/mpiAnalOptTools/mpiToGOAL/tests/: Makefile.am  mtgTest1.c  mtgTest2.c
regression/parser/: ArrayTest.sidl  ExceptionTest.sidl  Hello.sidl  Overload.sidl  args.sidl  cca-0.6.3.sidl  cca-0.8.2.sidl  clife.sidl  construct.sidl  cxxlife.sidl  decaf.sidl  enums.sidl  f90life.sidl  hello-client.sidl  hello-server.sidl  hello.sidl  hooks.sidl  inherit.sidl  knapsack.sidl  life.sidl  objarg.sidl  ordering.sidl  output.sidl  pythonlife.sidl  sidl.sidl  sidlx.sidl  sort.sidl  strings.sidl  strop.sidl  struct.sidl  vect.sidl  wave2d.sidl  wave2d_cxx.sidl  wave2d_cxx_internal.sidl  wave2d_f90.sidl  wrapper.sidl
rote/keyvalue/: .gitignore  Annotation.cpp  Annotation.h  Dynamic.cpp  Dynamic.h  Makefile  lemon.h  lexer.l  main.c  main.cpp  parser.y  scanner.l  token.h
rote/minitermite/: .gitignore  COPYING  ChangeLog  Doxyfile.in  Makefile.am  README  bootstrap.sh  configure.ac
rote/minitermite/doc/: src2term.1  term2src.1
rote/minitermite/m4/: llnl_enable_regression.m4
rote/minitermite/regression/: Makefile.include
rote/minitermite/regression/fortran/: complex.f03  funCall.F  icsd.F  icsd_t2.f  precision.f03
rote/minitermite/regression/fortran/include/: global.fh  mafdecls.fh  stdio.fh  tce.fh
rote/minitermite/regression/mrtc/success/: adpcm.c
rote/minitermite/src/: Makefile.include  PrologTerm.C  RoseEnums.C  RoseToTerm.C  RoseToTerm.cc  TermToRose.C  TermToRose.cc  c2term.C  find-enums.cc  sdf_grammar.pl  src2term.C  stratego-signatures.pl  term2c.C  term2src.C  term_lint_main.pl  termlexer.l++  termparser.y++  termpretty.l++
rote/minitermite/src/minitermite/: AstJanitor.h  PrologAtom.h  PrologCompTerm.h  PrologList.h  PrologTerm.h  RoseEnums.h  RoseToTerm.h  TermPrinter.h  TermToRose.h  minitermite.h.in  stl-term.h++  stratego-term.h++  swipl-term.h++  term.h++
rote/minitermite/src/termite/: astproperties.pl  asttransform.pl  termite_spec.pl  termlint.pl
rote/minitermite/testsuite/: Makefile.include
rote/minitermite/testsuite/mrtc/failure/: des.c
scripts/: Makefile.am  rth_run.pl
scripts/policies/: UnusedHeaders.pl  UnusedSources.pl
src/: CMakeLists.txt  Makefile.include  RoseEnums.C  TermToRose.C  c2term.C  term2c.C  termpretty.l++
src/ROSETTA/Grammar/: Node.code  (+2 more)
src/backend/: Makefile.am
src/minitermite/: AstJanitor.h  RoseToTerm.h  TermPrinter.h
src/util/: rose_strtoull.h
tests/translatorTests/: Makefile.am  input_DataSharingExplicit.C  ompDataSharingExplicit.C
testsuite/: Makefile.include
tutorial/: Makefile.am
(+79 files in other folders)
