EXTRA_DIST=\
    bupc_extensions.h \
    policy_hack.c \
    preinclude-cuda.h \
    preinclude-opencl.h \
    rose-g++-headerfilefixup.h \
    rose_specific_ammintrin.h \
    rose_specific_avxintrin.h \
    rose_specific_cdefs.h \
    rose_specific_complex.h \
    rose_specific_emmintrin.h \
    rose_specific_nmmintrin.h \
    rose_specific_pmmintrin.h \
    rose_specific_smmintrin.h \
    rose_specific_tmmintrin.h \
    rose_specific_xmmintrin.h \
    rose_stdarg.h \
    rose_varargs.h \
    upc.h \
    upc_collective.h \
    upc_io.h \
    upc_relaxed.h \
    upc_strict.h
