include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

if ROSE_WITH_MPI_C

SUBDIRS = mpiToGOAL

endif

check-local:
	@echo "***********************************************************************************************"
	@echo "*** ROSE/projects/mpiAnalOptTools: make check rule complete (terminated normally) ***"
	@echo "***********************************************************************************************"
